--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -2,7 +2,7 @@
 @import "general.mixin.scss";
 @import "flex.mixin.scss";
 
-$green: #14A774; 
+$green: #00833D; 
 $orange: #ff510b;
 $keyline-width: 3px;
 $keyline: $keyline-width solid $green;
@@ -92,6 +92,26 @@ md-select-menu {
   background-color: $orange !important;
 }
 
+[data-ng-switch-when='fishmoth'].insect-fact {
+  max-width: 330px;
+}
+
+[data-ng-switch-when='mosquito'].insect-fact {
+  max-width: 400px;
+}
+
+.insect-fact {
+  max-width: 420px;
+}
+
+.green-bold {
+  font-weight: bold;
+  color: $green;
+}
+
+h3.green-bold {
+  margin: 1.625em 0 0 0;
+}
 /***********************************************
 * Body container STYLE
 ***********************************************/
@@ -160,7 +180,11 @@ div[data-ui-navigation] {
   .animate-page-switch-container {
     padding: 0;
   }
-} 
+}
+
+.super-search-open .footer-nav {
+  z-index: 0 !important;
+}
 
 div[data-ui-navigation] {
   position: fixed;
@@ -179,6 +203,9 @@ div[data-ui-navigation] {
 
     &.in {
         top: 0;
+    }
+    &.clear {
+      background-color: rgba(#fff, 0);
     }
   }
   &:hover {
@@ -241,6 +268,8 @@ div[data-ui-carousel][single='true'] {
 .no-border {
   .carousel-control {
     border-color: transparent !important;
+    background-color: transparent !important;
+    color: $orange !important;
   }
 }
 .carousel-container {
@@ -270,13 +299,13 @@ div[data-ui-carousel][single='true'] {
       &.left {
         right: calc(100% - #{$keyline-width});
         // left: 10px;
-        padding: 5px 4px 5px 6px !important;
+        padding: 5px 6px 5px 6px !important;
       }
       &.right {
         left: calc(100% - #{$keyline-width});
         // right: 10px;
         //fix for skew font
-        padding: 5px 4px 5px 4px !important;
+        padding: 5px 6px 5px 6px !important;
       }
       &.hide {
         display: none;
@@ -285,6 +314,7 @@ div[data-ui-carousel][single='true'] {
         // transform:  scale(1.5);
         color: #fff;
         background-color: $green;
+        border-color: $green;
       }
     }
   }
@@ -375,10 +405,10 @@ div[data-ui-carousel][single='true'] {
     }
     .search-button {
       // position: absolute;
-      color:#14A774;
+      color:#fff;
       @include animation('spin 0.5s 1');
       &::before {
-        color: #14A774;
+        color: #fff;
         content: '\e879' !important;
       }
     }
@@ -446,6 +476,15 @@ div[data-ui-carousel][single='true'] {
   }
   .search-results {
     .search-result {
+      padding: 10px 15px;
+      img {
+        background: #fff;
+        border: 2px solid #fff;
+      }
+      h3 {
+        font-weight: bold;
+      }
+
       cursor: pointer;
       &:hover {
         background-color: rgba(#000, 0.1);
@@ -453,6 +492,10 @@ div[data-ui-carousel][single='true'] {
     }
     .collapsible-item.ng-animate {
       position: relative !important;
+    }
+
+    .collapsible-item .title {
+      text-transform: capitalize !important;
     }
   }
 }
@@ -476,7 +519,7 @@ div[data-ui-carousel][single='true'] {
     margin: 0 auto;    
     min-height: auto;
     box-sizing: border-box;
-    height: calc(100% - 80px - 40px);
+    height: calc(100% - 80px - 0px);
   }
 }
 
@@ -661,7 +704,7 @@ END slider style
     margin: 0 15%;
     width: 70%;
     position: absolute;
-    min-height: 350px;
+    min-height: 420px;
     pointer-events: none;
     // max-width: 870px;
     .content {
@@ -681,17 +724,20 @@ END slider style
       height: 100%;
       padding: 90px 30px;
       text-align: center;
+      text-transform: uppercase;
       color: $orange;
+      font-weight: bold;
       cursor: pointer;
 
       .number {
+        @include transition(0.4s cubic-bezier(.25,.8,.25,1));
         border: $keyline-width solid #555;
         display: block;
         width: 60px;
         height: 60px;
         border-radius: 100%;
         font-size: 47px;
-        font-weight: bold;
+        padding: 1px 0px 0px 2px;
         margin: 0 auto 15px;
         color: #555;
       }
@@ -706,12 +752,12 @@ END slider style
     &.inactive {
       pointer-events: all;
       opacity: 1;
-      border: $keyline-width solid #000;
+      border: $keyline;
       // width: 150px;
       pointer-events: all;
       min-height: 300px;
       max-width: 750px;
-      margin: 25px 10%;
+      margin: 58px 10%;
       .content {
         opacity: 0;
       }
@@ -791,14 +837,20 @@ END slider style
     max-width: 100%;
     &.active.inactive {
       // margin: 45px 10%;
-      border-color: #000;
+      border-color: #555;
       width: 70%;
+      margin-top: 30px;
       // min-height: 250px;
       // height: 250px;
       @include transform(translateX(-10%) translateY(7%) scale(0.7));
 
       .revert {
         // padding: 65px 5%;
+        .number {
+          background-color: #555;
+          color: #fff;
+
+        }
       }
     }
     &.active {
@@ -869,10 +921,11 @@ END slider style
       position: relative;
       text-align: left;
       .map {
-        width: 100%;
+        // width: 100%;
         // height: 70%;
-        max-height: 260px;
-        max-width: 330px;
+        max-height: 300px;
+        height: 300px;
+        // max-width: 330px;
       }
       button {
         background-color: rgba(0, 0, 0, 0.07);
@@ -907,7 +960,7 @@ END slider style
           }
           &.true {
             .pin {
-              fill: rgba(#14a774, 1);
+              fill: rgba($green, 1);
             }
             rect, polygon {
               border: 1px solid $green;
@@ -962,7 +1015,11 @@ END slider style
       }
     }
     .stats-container, .solution-container {
-      padding: 25px;
+      padding: 25px 50px;
+
+      .page-title {
+        margin: 1em 0;
+      }
     }
     .stat {
       line-height: 1;
@@ -997,6 +1054,10 @@ END slider style
 ***********************************************/
 .accordion {
   width: 100%;
+}
+
+.page-products-single .accordion {
+  margin-top: 50px;
 }
 
 
@@ -1059,12 +1120,66 @@ END slider style
       padding: 0 10px;
     }
 
+    .insect-insects {
+      
+      [class^='icon'] {
+          position: relative;
+          font-size: 20px;
+          width: 28px;
+          height: 30px;
+          padding: 0px;
+          left: 10px;
+          top: 5px;
+
+          &.icon-mosquito {
+            top: 6px;
+            left: 6px;
+          }
+
+          &.icon-fly {
+            left: 5px;
+          }
+
+          &.icon-fishmoth {
+            left: 11px;
+          }
+
+          &.icon-ant {
+            left: 7px;
+          }
+
+          &.icon-flea {
+            left: 8px;
+          }
+
+          &.icon-cockroach {
+            left: 7px;
+          }
+      }
+      li {
+          position: relative;
+          margin-left: 5px;
+          display: inline-block;
+          border-radius: 50%;
+          width: 35px;
+          height: 35px;
+          margin-left: 5px;
+      }
+    }
   }
 
   /***********************************************
   * Configurator
   ***********************************************/
   #configurator {
+    .step-1, .step-2, .step-3 {
+      &.active {
+        margin: 0;
+        width: auto;
+        padding: 0 15px;
+        @include transform(none);
+      }
+    }
     .step-1 {
       .content-inner {
         &::after {
