--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -8,19 +8,6 @@ $keyline-width: 3px;
 $keyline: $keyline-width solid $green;
 $mobile-break: 959px;
 /***********************************************
-* Products STYLE
-***********************************************/
-.product-filter-categories {
-  
-
-  &.full-width {
-    max-width: 90%;
-  }
-  @media only screen and (max-width: $mobile-break) {
-    max-width: 100%;
-  }
-}
-/***********************************************
 * General STYLE
 ***********************************************/
  
@@ -32,6 +19,10 @@ $mobile-break: 959px;
 
 .inline {
   display: inline-block !important;
+}
+
+.fill-width {
+  width: 100%;
 }
 
 md-toolbar {
@@ -48,6 +39,10 @@ md-toolbar {
     }
   }
 } 
+
+md-dialog {
+  pointer-events: none;
+}
 
 .md-track-container {
   top: 24px;
@@ -112,6 +107,10 @@ md-select-menu {
 h3.green-bold {
   margin: 1.625em 0 0 0;
 }
+
+.hr-divider {
+  height: $keyline-width;
+}
 /***********************************************
 * Body container STYLE
 ***********************************************/
@@ -148,6 +147,10 @@ div[data-ui-navigation] {
 
 .super-menu {
   z-index: 10;
+
+  .side-nav {
+    padding:50px 100px;
+  }
 }
 //green pages open
 .super-menu-open,
@@ -179,6 +182,10 @@ div[data-ui-navigation] {
 
   .animate-page-switch-container {
     padding: 0;
+  }
+
+  .page-title {
+    color: #fff;
   }
 }
 
@@ -246,6 +253,16 @@ md-sidenav {
 
 }
 
+/***********************************************
+* Products STYLE
+***********************************************/
+.product-filter-categories {
+  max-width: 54%;
+
+  &.full-width {
+    max-width: 90%;
+  }
+}
 
 
 /***********************************************
@@ -509,11 +526,17 @@ div[data-ui-carousel][single='true'] {
   background: #fff;
   z-index: 9;
   padding: 20px;
+  padding-bottom: 80px;
   padding-top: 80px;
   // overflow: auto;
   box-sizing: border-box;
   height: calc(100% - 80px - 48px);
 
+  
+  .page-title {
+    color: #fff;
+    font-size: 50px;
+  }
   .inner-container {
     max-width: 1200px;
     margin: 0 auto;    
@@ -679,6 +702,39 @@ END slider style
   .breadcrumbs {
     max-width: 350px;
     margin: 0 auto;
+    position: relative;
+    pointer-events: all;
+
+    md-slider {
+      pointer-events: none;
+    }
+    .breadcrumb-buttons {    
+      position: absolute;
+      top: -6px;
+      left: -0.5%;
+      width: 102%;
+      max-width: none;
+      z-index: 0;
+
+      span {
+        @include  transition(0.4s cubic-bezier(.25,.8,.25,1));
+        display: inline-block;
+        border-radius: 100%;
+        width: 15px;
+        height: 15px;
+        background-color: $orange;
+        cursor: pointer;
+
+        &.active {
+          background-color: #444;
+        }
+
+        &:last-child {
+          background-color: #444;
+          cursor: auto;
+        }
+      }
+    }
   }
   .configurator-steps {
     width: 100%;
@@ -772,7 +828,7 @@ END slider style
     text-align: center !important;
     padding: 20px;
     vertical-align: top;
-    border: 5px solid transparent;    
+    border: $keyline-width solid transparent;    
     max-width: 200px;
 
     .start-button {
@@ -811,7 +867,7 @@ END slider style
     }
 
     &.selected{
-      border: 5px solid $green;
+      border: $keyline-width solid $green;
       .thumbnail i {
         border-color: $green;
         color: $green;
@@ -924,7 +980,7 @@ END slider style
         // width: 100%;
         // height: 70%;
         max-height: 300px;
-        height: 300px;
+        // height: 300px;
         // max-width: 330px;
       }
       button {
@@ -1096,16 +1152,49 @@ END slider style
 /***********************************************
 * Media Queries
 ***********************************************/
-
 @media screen and (max-width: 959px){ //everything under small (layout-sm)
 
+  .main-container {
+    padding: 0 15px;
+    max-width: 500px !important;
+    margin: 0 auto;
+  }
+
+  h1.page-title {
+    font-size: 28pt !important;
+    margin-top: 1em !important;
+
+    &.main {
+      font-size: 40pt !important;
+    }
+  }
+
+  h3.page-title {
+    font-size: 25pt !important;
+    margin-top: 50px !important;
+  }
+  .animate-page-switch-container {
+      padding-top: 80px;
+  }
+
+  /***********************************************
+  * Green Pages
+  ***********************************************/
+
+  .super-menu-open,
+  .page-about,
+  .page-legal,
+  .page-faq,
+  .page-contact {
+    .page-content {
+      padding: 0px 15px;
+      max-width: 500px;
+    }
+  }
   /***********************************************
   * Insect Page
   ***********************************************/
   .page-insects {
-    .main-container {
-      padding: 0 15px;
-    }
     .super-hero-bg {
       max-height: 100%;
 
@@ -1116,12 +1205,17 @@ END slider style
     .super-bug-image {
       top: 0;
     }
+    .primary-cta.main {
+      padding: 5px 15px;
+      font-size: 27px;
+    }
     .primary-tag {
       padding: 0 10px;
     }
 
     .insect-insects {
-      
+      width: 100%;
+      text-align: center;
       [class^='icon'] {
           position: relative;
           font-size: 20px;
@@ -1141,7 +1235,7 @@ END slider style
           }
 
           &.icon-fishmoth {
-            left: 11px;
+            left: 4px;
           }
 
           &.icon-ant {
@@ -1157,14 +1251,131 @@ END slider style
           }
       }
       li {
-          position: relative;
-          margin-left: 5px;
-          display: inline-block;
-          border-radius: 50%;
-          width: 35px;
-          height: 35px;
-          margin-left: 5px;
+        text-align: left;
+        position: relative;
+        margin-left: 5px;
+        display: inline-block;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+        margin-left: 5px;
       }
+    }
+    .insect-buttons-cta {
+      width: 100%;
+      margin: 10px 0;
+
+      div {
+        padding: 0;
+        border: 1px solid #cccccc;
+        border-left: 0;
+        border-right: 0;
+        margin: 0;
+
+        &:last-child {
+          border-top: 0;
+        }
+
+
+        .md-button {
+          padding: 10px;
+          max-width: auto;
+          margin: 0;
+          width: 100%;
+
+          .icon {
+            display: none;
+          }
+        }
+      }
+    }
+    .insect-controller-buttons, .product-controller-buttons {
+      top: 12%;
+      top: 15vh;
+      .icon-chevron-left-thin {
+        left: 0;
+      }
+      .icon-chevron-right-thin {
+        right: 0;
+      }
+    }
+  }
+
+  /***********************************************
+  * Carousel
+  ***********************************************/
+  .carousel-container {
+    display: inline-block !important;
+  }
+  [data-ui-carousel].single {
+    .carousel-container, .carousel-container .carousel {
+      max-width: 100%;
+    }
+  } 
+  .carousel-container, .carousel-container .carousel {
+    max-width: 200px;
+  }
+  .retailer-carousel .carousel-container, .retailer-carousel .carousel-container .carousel {
+    max-width: 100%;
+  } 
+  /***********************************************
+  * Products
+  ***********************************************/
+
+  .page-products .product-filter-categories {
+    border-bottom: $keyline;
+  }
+
+  .page-products-single .product-filter-categories {
+    border-bottom: none;
+  }
+  .product-filter-categories {
+    max-width: 100%;
+    margin: 0;
+
+    .primary-tag {
+      font-size: 0.6em;
+      padding: 5px 10px;
+    }
+
+    &.full-width {
+      margin: 0 auto;
+    }
+  }
+
+  .product-controller-buttons {
+    width: 110%;
+    left: -5%;
+
+    .icon-chevron-right-thin, .icon-chevron-left-thin {
+      padding: 10px;
+    }
+  }
+
+  .md-button.primary-tag  {
+    padding: 5px 10px;
+    line-height: 1;
+  }
+
+  /***********************************************
+  * Navigation
+  ***********************************************/
+
+  md-sidenav .side-nav-container {
+    padding:15px 20px;
+    ul {
+      margin: 0;
+      padding: 0;
+      li {
+      }
+    }
+  }
+
+  .footer-nav {
+    .md-button {
+      font-size: 12px;
+      max-width: none;
+      min-width: auto;
     }
   }
 
@@ -1206,9 +1417,26 @@ END slider style
         }
       }
     }
+    .step-2 {
+      font-size: 0.7em !important;
+
+      &.active {
+        width: calc(100% - 96px);
+      }
+    }
     .step-3 {
+      &.active {
+        width: calc(100% - 36px);
+      }
       .map-container {
         width: 100%;
+        text-align: center;
+        img {
+          max-height: none !important;
+          height: auto !important;
+          width: 100% !important;
+          max-width: 400px !important;
+        }
       }
     }
     .final {
@@ -1216,10 +1444,31 @@ END slider style
         .stats-container {
           min-height: 400px;
         }
+        .stats-container, .solution-container {
+          padding: 15px;
+        }
         .product img {
           max-width: 100%;
         }
       }
     }
+  }
+
+  /***********************************************
+  * Search
+  ***********************************************/
+
+  .search-container.layout-fill {
+    
+    .page-title {
+      // font-size: 25px;
+    }
+  }
+}
+
+
+@media screen and (max-width: 350px){ //Smallest device
+  .product-filter-categories .primary-tag {
+    font-size: 8px;
   }
 }
