--- a/wp-content/plugins/projectdoom/doom-app/assets/libs/doom-icons/style.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/libs/doom-icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'doom-icons';
-  src:  url('fonts/doom-icons.eot?rk1cd8');
-  src:  url('fonts/doom-icons.eot?rk1cd8#iefix') format('embedded-opentype'),
-    url('fonts/doom-icons.ttf?rk1cd8') format('truetype'),
-    url('fonts/doom-icons.woff?rk1cd8') format('woff'),
-    url('fonts/doom-icons.svg?rk1cd8#doom-icons') format('svg');
+  src:  url('fonts/doom-icons.eot?q29xt7');
+  src:  url('fonts/doom-icons.eot?q29xt7#iefix') format('embedded-opentype'),
+    url('fonts/doom-icons.ttf?q29xt7') format('truetype'),
+    url('fonts/doom-icons.woff?q29xt7') format('woff'),
+    url('fonts/doom-icons.svg?q29xt7#doom-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
