--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
@@ -308,7 +308,7 @@ div[data-ui-carousel][single='true'] {
 }
 
 .retailer-carousel .item .bg-box::before {
-  content: initial !important;
+  content: none !important;
 }
 
 .no-border .carousel-control {
@@ -770,7 +770,7 @@ div[data-ui-configurator][pest='ant'] .configurator-steps .md-thumb::after {
 
 div[data-ui-configurator][pest='fishmoth'] .configurator-steps .md-thumb::after {
   content: "\e907";
-  top: 0px;
+  top: -18px;
   font-size: 55px;
 }
 
